--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/style-resources": "^1.2.1",
+    "bezier-easing": "^2.1.0",
     "chart.js": "^3.5.0",
     "chartjs-adapter-luxon": "^1.0.0",
+    "compute-lcm": "^1.1.2",
     "core-js": "^3.9.1",
     "luxon": "^2.0.1",
     "nuxt": "^2.15.3",
