--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chartjs-adapter-luxon": "^1.0.0",
     "compute-lcm": "^1.1.2",
     "core-js": "^3.9.1",
+    "jsoneditor": "^9.7.0",
     "luxon": "^2.0.1",
     "nuxt": "^2.15.3",
     "sass": "^1.35.2",
